--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
     "authors": [
         {
             "name": "Links der isar",
-            "email": "-",
+            "email": "t.modric@linksderisar.com",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "filament/filament": "^3.2",
+        "laravel/laravel": "^11.3",
+        "spatie/laravel-model-states": "^2.7"
     },
     "require-dev": {
         "pestphp/pest": "^2.20",
@@ -42,6 +45,16 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "phpstan/extension-installer": true
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                  "Linksderisar\\FilamentStatePattern\\FilamentStatePatternServiceProvider"
+            ],
+            "aliases": {
+                "FilamentStatePattern": "Linksderisar\\FilamentStatePattern\\FilamentStatePattern"
+            }
         }
     },
     "minimum-stability": "dev",
