--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.0",
-        "laravel/laravel": "^10.0",
+        "laravel/framework": "^11.0",
         "spatie/laravel-model-states": "^2.7"
     },
     "require-dev": {
